--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -62,10 +62,10 @@
     let counter = 1;
 
     arr.forEach((question) => {
-      let questionDiv = $(`<div class="custom-input"></div>`)
+      let questionDiv = $(`<div class="questions-container"></div>`)
       let questionHeader = (`<br><h3>Question ${counter}</h3>`)
       let questionSurvey = (`<h5>${question.surveyQuestion}</h5>`)
-      $(questionDiv).append(questionHeader, questionSurvey, optionBuild)
+      $(questionDiv).append(questionHeader, questionSurvey, optionsBuild)
       $("#finder-questions").append(questionDiv)
       counter++;
     });
@@ -73,7 +73,7 @@
   };
 
   // Options drill-down
-  let optionBuild = (
+  let optionsBuild = (
     `
     <select class="custom-select custom-select-sm">
       <option selected>Select an Option</option>
@@ -97,7 +97,7 @@
     let scoreArray = []
     for (let i = 0; i < results.length; i++) {
       scoreArray.push(results[i].value)
-    }
+    };
 
     // Build user profile
     let userProfile = {
@@ -106,6 +106,11 @@
       scores: scoreArray
     };
     console.log(userProfile)
+
+    // Handle POST: URL, data and callback function
+    $.post("/api/friends", userProfile, function (data) {
+      console.log('handle api user profile')
+    })
   });
 
 
