disable option button title

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -98,7 +98,7 @@
   let optionsBuild = (
     `
     <select class="custom-select custom-select-sm">
-      <option selected>Select an Option</option>
+      <option value="" disabled selected>Select an Option</option>
       <option value="1">1 Strongly Agree</option>
       <option value="2">2</option>
       <option value="3">3</option>
