--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,11 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <!-- Bootstrap & jQuery -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <title>Friend Finder</title>
 </head>
 
 <body>
-  <h1>home page</h1>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Friend Finder</h1>
+      <hr class="my-4">
+      <h2>Answer a few survey questions.</h2>
+      <h2>Then find the friend with the greatest compatibility</h2>
+      <br>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to
+          Survey</a>
+      </p>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p><a href="/api/friends">API Friend List</a> | <a
+            href="https://github.com/fcarlone/node-express-friend-finder">GitHub Repo</a>
+      </div>
+    </footer>
+
+  </div>
 </body>
 
 </html>
