--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,13 +19,13 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Friend Finder</h1>
+      <h1 class="display-4"><i class="fa fa-user-plus"></i> Friend Finder</h1>
       <hr class="my-4">
       <h2>Answer a few survey questions.</h2>
       <h2>Then find the friend with the greatest compatibility</h2>
       <br>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to
+        <a class="btn btn-primary btn-lg" href="/survey" role="button"><i class="fa fa-list-ul"></i> Go to
           Survey</a>
       </p>
     </div>
