--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,14 +25,15 @@
       <h2>Then find the friend with the greatest compatibility</h2>
       <br>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/survey" role="button"><i class="fa fa-list-ul"></i> Go to
+        <a style="background-color: #337ab7;" class="btn btn-primary btn-lg" href="/survey" role="button"><i
+            class="fa fa-list-ul"></i> Go to
           Survey</a>
       </p>
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friend List</a> | <a
+        <p><a style="color: #337ab7;" href="/api/friends">API Friend List</a> | <a style="color: #337ab7;"
             href="https://github.com/fcarlone/node-express-friend-finder">GitHub Repo</a>
       </div>
     </footer>
