Reset drill-down select values after submitting

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -180,6 +180,11 @@
         $("#input-photo").val("");
         scoreArray = [];
 
+        // Reset drill-down choices
+        $(".chosen-container option").prop("selected", function () {
+          return this.defaultSelected;
+        })
+
       });
     }
   };
