Reset drill-down select values after submitting

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -180,7 +180,7 @@
         $("#input-photo").val("");
         scoreArray = [];
 
-        // Reset drill-down choices
+        // Reset drill-down select values
         $(".chosen-container option").prop("selected", function () {
           return this.defaultSelected;
         })
