--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,7 +34,7 @@
     <footer class="footer">
       <div class="container">
         <p><a style="color: #337ab7;" href="/api/friends">API Friend List</a> | <a style="color: #337ab7;"
-            href="https://github.com/fcarlone/node-express-friend-finder">GitHub Repo</a>
+            href="https://github.com/fcarlone/node-express-friend-finder" target="_blank">GitHub Repo</a>
       </div>
     </footer>
 
