Update survey questions

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -90,16 +90,16 @@
 
   // Questions Array
   const finderQuestionsArray = [
-    { surveyQuestion: 'The first question 1' },
-    { surveyQuestion: 'The second question 2' },
-    { surveyQuestion: 'The third question 3' },
-    { surveyQuestion: 'The four question 4' },
-    { surveyQuestion: 'The five question 5' },
-    { surveyQuestion: 'The six question 6' },
-    { surveyQuestion: 'The seven question 7' },
-    { surveyQuestion: 'The eight question 8' },
-    { surveyQuestion: 'The nine question 9' },
-    { surveyQuestion: 'The ten question 10' }
+    { surveyQuestion: "It's OK to wake up with no plans for the day." },
+    { surveyQuestion: "People frequently get on your nerves." },
+    { surveyQuestion: "Empathy makes us truly human." },
+    { surveyQuestion: "You should always drive with two hands on the steering wheel." },
+    { surveyQuestion: "Online surveys is the best way to match friends." },
+    { surveyQuestion: "People have free will." },
+    { surveyQuestion: "Absolute power corrupts absolutely." },
+    { surveyQuestion: "In your lifetime humans will land on Mars." },
+    { surveyQuestion: "The Earth is flat." },
+    { surveyQuestion: "Green is a cool color." }
   ]
 
   // Create questions tag
@@ -122,11 +122,11 @@
     `
     <select class="chosen-container custom-select-sm">
       <option value="" disabled selected>Select an Option</option>
-      <option value="1">1 Strongly Agree</option>
+      <option value="1">1 Strongly Disagree</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
-      <option value="5">5 Strongly Disagree</option>
+      <option value="5">5 Strongly Agree</option>
     </select>
     <br>
     `
